Fixed spacing on advising page

--- a/client/stylesheets/sass/pages/advising.scss
+++ b/client/stylesheets/sass/pages/advising.scss
@@ -1,9 +1,25 @@
 .advising-page {
     .section-content {
+        .section-list {
+            li {
+                .links {
+                    font-size: 1.5rem;
+                }
+            }
+        }
         .info {
             .bold {
                 font-family: 'DINProBold', sans-serif;
             }
+            .description {
+                font-size: 1.5rem;
+            }
+            .advisor {
+                margin-top: 10px;
+            }
+        }
+        .cnr-title {
+            margin-top: 10px;
         }
     }
 }
